--- a/material/overrides/main.html
+++ b/material/overrides/main.html
@@ -1,11 +1,11 @@
 {#-
-  This file was automatically generated - do not edit
+This file was automatically generated - do not edit
 -#}
 {% extends "base.html" %}
 {% block extrahead %}
-  <link rel="stylesheet" href="{{ 'assets/stylesheets/custom.00c04c01.min.css' | url }}">
+<link rel="stylesheet" href="{{ 'assets/stylesheets/custom.00c04c01.min.css' | url }}">
 {% endblock %}
-{% block announce %}
+<!-- {% block announce %}
   For updates follow <strong>@squidfunk</strong> on
   <a rel="me" href="https://fosstodon.org/@squidfunk">
     <span class="twemoji mastodon">
@@ -20,8 +20,8 @@
     </span>
     <strong>Twitter</strong>
   </a>
-{% endblock %}
+{% endblock %} -->
 {% block scripts %}
-  {{ super() }}
-  <script src="{{ 'assets/javascripts/custom.129bd6ad.min.js' | url }}"></script>
+{{ super() }}
+<script src="{{ 'assets/javascripts/custom.129bd6ad.min.js' | url }}"></script>
 {% endblock %}
