--- a/material/overrides/main.html
+++ b/material/overrides/main.html
@@ -5,22 +5,9 @@ This file was automatically generated - do not edit
 {% block extrahead %}
 <link rel="stylesheet" href="{{ 'assets/stylesheets/custom.00c04c01.min.css' | url }}">
 {% endblock %}
-<!-- {% block announce %}
-  For updates follow <strong>@squidfunk</strong> on
-  <a rel="me" href="https://fosstodon.org/@squidfunk">
-    <span class="twemoji mastodon">
-      {% include ".icons/fontawesome/brands/mastodon.svg" %}
-    </span>
-    <strong>Fosstodon</strong>
-  </a>
-  and
-  <a href="https://twitter.com/squidfunk">
-    <span class="twemoji twitter">
-      {% include ".icons/fontawesome/brands/twitter.svg" %}
-    </span>
-    <strong>Twitter</strong>
-  </a>
-{% endblock %} -->
+{% block announce %}
+This is Mehrdad <strong>@mehrdadq8i</strong> almost everywhere ;)
+{% endblock %}
 {% block scripts %}
 {{ super() }}
 <script src="{{ 'assets/javascripts/custom.129bd6ad.min.js' | url }}"></script>
