update my nickname

--- a/material/overrides/main.html
+++ b/material/overrides/main.html
@@ -6,7 +6,7 @@ This file was automatically generated - do not edit
 <link rel="stylesheet" href="{{ 'assets/stylesheets/custom.00c04c01.min.css' | url }}">
 {% endblock %}
 {% block announce %}
-This is Mehrdad <strong>@mehrdadq8i</strong> almost everywhere ;)
+This is Mehrdad's <strong>@ᴍʜʀᴅզ8ɪ</strong> Nickname, almost everywhere ;)
 {% endblock %}
 {% block scripts %}
 {{ super() }}
